force-app/main/default/objects/HFS_Entity__c/HFS_Entity__c.object-meta.xml
<CustomObject>
    <description>A person, organization, unit, supplier, partner, regulator, or other identified entity.</description>
    <label>Entity</label>
    <nameField>
        <displayFormat>ENT-{000000}</displayFormat>
        <label>Entity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>