force-app/main/default/objects/HFS_Entity__c/fields/Attributes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Attributes_JSON__c</fullName>
    <label>Attributes JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>