force-app/main/default/objects/HFS_Entity__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERSON</fullName>
                <label>Person</label>
            </value>
            <value>
                <fullName>ORGANIZATION</fullName>
                <label>Organization</label>
            </value>
            <value>
                <fullName>ORGANIZATIONAL_UNIT</fullName>
                <label>Organizational Unit</label>
            </value>
            <value>
                <fullName>SUPPLIER</fullName>
                <label>Supplier</label>
            </value>
            <value>
                <fullName>PARTNER</fullName>
                <label>Partner</label>
            </value>
            <value>
                <fullName>REGULATOR</fullName>
                <label>Regulator</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>