force-app/main/default/objects/HFS_Entity__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <type>DateTime</type>
</CustomField>